...
import androidx.compose.ui.unit.dp
import androidx.compose.ui.unit.sp
import com.ytone.longcare.common.utils.singleClick
import com.ytone.longcare.feature.identification.R
import com.ytone.longcare.ui.components.BottomSafeActionContainer

internal const val IDENTIFICATION_BACK_TAG = "identification_back"
internal const val IDENTIFICATION_NEXT_TAG = "identification_next"

@OptIn(ExperimentalMaterial3Api::class)
@Composable
internal fun IdentificationTopBar(onNavigateBack: () -> Unit) {
    CenterAlignedTopAppBar(
        title = {
...
